--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -173,7 +173,21 @@
       }
 
     }
+
+    &.picked {
+      &::after{
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-color: $color-success;
+        opacity: 0.4;
+      }
+    }
   }
+
 
   [data-table="1"] {
     left: 40px;
